syntax = "proto3";

package reddit;

message User {
  optional string user_id = 1;
}

message Post {
  optional int32 post_id = 1;
  optional string title = 2;
  optional string text = 3;

  oneof url {
    string video_url = 4;
    string image_url = 5;
  }

  optional User author = 6;
  optional int32 score = 7;

  enum PostState {
    POST_STATE_NORMAL = 0;
    POST_STATE_LOCKED = 1;
    POST_STATE_HIDDEN = 2;
  }

  optional PostState state = 8;
  optional string publication_date = 9;

}

message Comment {
  optional int32 comment_id = 1;
  optional string text = 2;
  optional User author = 3;
  optional int32 score = 4;

  enum CommetState {
    COMMENT_STATE_NORMAL = 0;
    COMMENT_STATE_HIDDEN = 1;
  }

  optional CommetState state = 5;
  optional string publication_date = 6;

  enum ReplyType {
    REPLY_TYPE_POST = 0;
    REPLY_TYPE_COMMENT = 1;
  }
  optional ReplyType reply_type = 7;
  optional int32 reply_to = 8;

}